<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context="com.sim.alzheimermate.Fragments.LoginFragment">

    <ImageView
        android:layout_width="1350dp"
        android:layout_height="135dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/login_image"
        android:src="@drawable/logo" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/tohide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
       >
        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginTop="80dp"
            android:fontFamily="cursive"
            android:text="@string/nurse_section"

            android:textColor="@color/primaryTextColor"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/email1" />

            <EditText
                android:id="@+id/emailE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="#00000000"

                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:letterSpacing="0.1"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#d9e5f3"
                android:textSize="16sp"
                android:theme="@style/EditTextTheme" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/lock" />

            <EditText
                android:id="@+id/passwordE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="#00000000"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:letterSpacing="0.1"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#d9e5f3"
                android:textSize="16sp"
                android:theme="@style/EditTextTheme" />
        </LinearLayout>

        <Button
            android:id="@+id/email_sign_in_button1"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primaryDarkColor"
            android:shadowRadius="5"
            android:text="@string/action_sign_in"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Signuplink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_account_yet_create_one"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/float_transparent"
            android:background="@color/float_transparent"
            android:textColor="@color/primaryDarkColor"
            />

    </LinearLayout>
</FrameLayout>
