<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#DCDCDC"
        android:isScrollContainer="true"
        android:orientation="vertical"
        tools:context="com.sim.alzheimermate.Fragments.Add_Person_Fragment">
        <!-- TODO: Update blank fragment layout -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="85dp"
            android:background="@color/primaryTextColor"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/user1" />

            <EditText
                android:id="@+id/nom_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@color/primaryTextColor"
                android:elevation="20dp"
                android:focusable="true"
                android:focusedByDefault="true"
                android:hint="@string/lastname_of_the_person"
                android:inputType="text"
                android:padding="10dp"
                android:theme="@style/EditTextTheme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:background="@color/primaryTextColor"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/user_6" />

            <EditText
                android:id="@+id/prenom_per"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@color/primaryTextColor"
                android:elevation="20dp"
                android:hint="@string/firstname_of_the_person"
                android:inputType="text"
                android:padding="10dp"
                android:theme="@style/EditTextTheme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:background="@color/primaryTextColor"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/email" />

            <EditText
                android:id="@+id/email_per"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@color/primaryTextColor"
                android:elevation="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:theme="@style/EditTextTheme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:background="@color/primaryTextColor"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/phone_number" />

            <EditText
                android:id="@+id/num_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@color/primaryTextColor"
                android:elevation="20dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="10dp"
                android:theme="@style/EditTextTheme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:background="@color/primaryTextColor"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/family_tree" />

            <EditText
                android:id="@+id/lien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@color/primaryTextColor"
                android:elevation="20dp"
                android:hint="@string/who_is_he_to_the_patient"
                android:inputType="text"
                android:padding="10dp"
                android:theme="@style/EditTextTheme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/im_test"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/thumbmail"
                android:src="@drawable/add_user" />

            <Button
                android:id="@+id/picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/add_apicture"
                android:textColor="@color/primaryTextColor" />
        </LinearLayout>


        <Button
            android:id="@+id/savebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:elevation="10dp"
            android:padding="20dp"
            android:text="@string/save"
            android:textColor="@color/primaryTextColor" />

    </LinearLayout>


</ScrollView>
