<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scMed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC">

    <LinearLayout
        android:id="@+id/testlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#DCDCDC"
        android:orientation="vertical"
        tools:context="com.sim.alzheimermate.Fragments.Add_Med_Fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="65dp"
            android:background="@color/primaryTextColor"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/briefcase" />

            <EditText
                android:id="@+id/nom_med"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@color/primaryTextColor"
                android:elevation="20dp"
                android:hint="@string/name_of_the_medicine"
                android:inputType="text"
                android:padding="10dp"
                android:theme="@style/EditTextTheme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:background="@color/primaryTextColor"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/hourglass" />

            <EditText
                android:id="@+id/heure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@color/primaryTextColor"
                android:clickable="false"
                android:cursorVisible="false"
                android:elevation="20dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/time_when_to_take_it_hh_mm_ss"
                android:inputType="text"
                android:padding="10dp"
                android:theme="@style/EditTextTheme" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:background="@color/primaryTextColor"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/receiving_time" />

            <EditText
                android:id="@+id/nb_prises"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@color/primaryTextColor"
                android:elevation="20dp"
                android:hint="@string/how_many_times_per_day"
                android:inputType="number"
                android:padding="10dp"
                android:theme="@style/EditTextTheme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/im_med"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/calendar" />

            <Button
                android:id="@+id/med_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/addp"
                android:textColor="@color/primaryTextColor" />
        </LinearLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:padding="20dp"
            android:text="@string/save"
            android:textColor="@color/primaryTextColor"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</ScrollView>